# rules_uv_bare

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  REPO.bazel  ruff.toml  uv.lock.json
docs/: BUILD.bazel  rules.md  update.sh
examples/: Makefile
examples/basic/: BUILD.bazel  MODULE.bazel  README.md
examples/basic/app/: BUILD.bazel  pyproject.toml
examples/basic/app/app/: __init__.py
examples/basic/app/tests/: test_app.py
examples/basic/lib/: BUILD.bazel  pyproject.toml
examples/env_provider/: BUILD.bazel  MODULE.bazel  README.md  cargo_uv_env.bzl
examples/env_provider/app/: BUILD.bazel  pyproject.toml
examples/env_provider/app/app/: __init__.py
examples/env_provider/app/tests/: test_app.py
examples/import_from_rules_python/: BUILD.bazel  MODULE.bazel  README.md
examples/import_from_rules_python/app/: BUILD.bazel  pyproject.toml
examples/import_from_rules_python/app/app/: __init__.py
examples/import_from_rules_python/app/tests/: test_app.py
examples/import_from_rules_python/lib/: BUILD.bazel
examples/native/: BUILD.bazel  MODULE.bazel  README.md
examples/native/app/: BUILD.bazel  pyproject.toml
examples/native/app/tests/: test_app.py
examples/native/native_lib/: BUILD.bazel  pyproject.toml
examples/native/native_lib/native_lib/: __init__.py
examples/native_cross/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
examples/native_cross/app/: BUILD.bazel  pyproject.toml
examples/native_cross/app/app/: __init__.py
examples/native_cross/native_lib/: BUILD.bazel  _ext.cpp
tools/: BUILD.bazel
uv/: BUILD.bazel  defs.bzl
uv/cc/: defs.bzl
uv/cc/private/: cc_env.bzl
uv/private/: BUILD.bazel  bundle_copy.sh  deploy.bzl  deploy_copy.sh  entrypoint.bzl  import_wheel.bzl  lock.bzl  markers.bzl  package.bzl  paths.bzl  providers.bzl  py_runtime.bzl  uv_env.bzl  venv_activate.sh  venv_entrypoint.sh.tpl  venv_run.sh  wheel.bzl  wheel_tool.py  workspace.bzl  workspace_tool.py
