load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["defs.bzl"],
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//uv/private:deploy",
        "//uv/private:entrypoint",
        "//uv/private:import_wheel",
        "//uv/private:lock",
        "//uv/private:markers",
        "//uv/private:package",
        "//uv/private:providers",
        "//uv/private:wheel",
        "//uv/private:workspace",
    ],
)
