load("@rules_uv_bare//uv:defs.bzl", "uv_py_deploy", "uv_py_entrypoint", "uv_py_export", "uv_py_lock", "uv_py_test", "uv_py_workspace")

uv_py_workspace(
    name = "ws",
    lock = "uv.lock",
    members = [
        "//lib",
        "//app",
    ],
    python_requires = ">=3.11",
)

uv_py_lock(
    name = "ws.lock",
    workspace = ":ws",
)

uv_py_export(
    name = "ws.export",
    workspace = ":ws",
)

uv_py_entrypoint(
    name = "run",
    cmd = [
        "python",
        "-m",
        "app",
    ],
    workspace = ":ws",
)

# Another target to demonstrate $(rlocation ...) usage.
uv_py_entrypoint(
    name = "run2",
    cmd = [
        "python",
        "-m",
        "app",
        "--config",
        # NOTE: _main is the canonical name of the root module.
        "$(rlocation _main/another_app_config.json)",
    ],
    data = ["another_app_config.json"],
    workspace = ":ws",
)

uv_py_test(
    name = "test",
    cmd = [
        "python",
        "-m",
        "pytest",
        "app/tests/",
    ],
    workspace = ":ws",
)

uv_py_deploy(
    name = "deploy",
    python_version = "3.12",
    workspace = ":ws",
)
