load("@rules_uv_bare//uv:defs.bzl", "uv_py_deploy", "uv_py_entrypoint", "uv_py_export", "uv_py_lock", "uv_py_test", "uv_py_workspace")

uv_py_workspace(
    name = "ws",
    # Do not bundle Python interpreter at `.deploy` target.
    deploy_bundle_python = False,
    deploy_uv_python = "cpython-3.12",
    lock = "uv.lock",
    members = [
        "//lib",
        "//app",
    ],
    python_requires = ">=3.11",
)

uv_py_lock(
    name = "ws.lock",
    workspace = ":ws",
)

uv_py_export(
    name = "ws.export",
    workspace = ":ws",
)

uv_py_entrypoint(
    name = "run",
    cmd = ["app"],
    workspace = ":ws",
)

# Another target to demonstrate $(rlocation ...) usage.
uv_py_entrypoint(
    name = "run2",
    cmd = [
        "app",
        "--config",
        # NOTE: _main is the canonical name of the root module.
        "$(rlocation _main/another_app_config.json)",
    ],
    data = ["another_app_config.json"],
    workspace = ":ws",
)

uv_py_test(
    name = "test",
    cmd = [
        "pytest",
        "app/tests/",
    ],
    workspace = ":ws",
)

uv_py_deploy(
    name = "deploy",
    workspace = ":ws",
)
