module(
    name = "env_provider_example",
    version = "0.0.1",
)

bazel_dep(name = "rules_uv_bare", version = "0.0.1")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_python", version = "1.8.5")
bazel_dep(name = "platforms", version = "1.0.0")

local_path_override(
    module_name = "rules_uv_bare",
    path = "../..",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)
