module(
    name = "import_from_rules_python_example",
    version = "0.0.1",
)

bazel_dep(name = "rules_uv_bare", version = "0.0.1")
bazel_dep(name = "rules_python", version = "1.8.5")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

local_path_override(
    module_name = "rules_uv_bare",
    path = "../..",
)
