load("@rules_uv_bare//uv:defs.bzl", "uv_py_deploy", "uv_py_entrypoint", "uv_py_export", "uv_py_lock", "uv_py_test", "uv_py_workspace")
load("@rules_uv_bare//uv/cc:defs.bzl", "uv_cc_env")

uv_cc_env(name = "cc_env")

uv_py_workspace(
    name = "ws",
    build_env_deps = [":cc_env"],
    dependency_groups = {"test": ["pytest>=8.0"]},
    # Force msgpack to build from source for demonstration.
    extra_pyproject_content = """
tool.uv.no-binary-package = ["msgpack"]
""",
    host_python = "cpython-3.12",
    lock = "uv.lock",
    members = ["//app"],
)

uv_py_lock(
    name = "ws.lock",
    workspace = ":ws",
)

uv_py_export(
    name = "ws.export",
    workspace = ":ws",
)

uv_py_entrypoint(
    name = "run",
    cmd = ["app"],
    workspace = ":ws",
)

uv_py_test(
    name = "test",
    cmd = [
        "pytest",
        "app/tests/",
    ],
    workspace = ":ws",
)

uv_py_deploy(
    name = "deploy",
    workspace = ":ws",
)
