module(
    name = "native_example",
    version = "0.0.1",
)

bazel_dep(name = "rules_uv_bare", version = "0.0.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_python", version = "1.8.5")
bazel_dep(name = "nanobind_bazel", version = "2.10.2")

local_path_override(
    module_name = "rules_uv_bare",
    path = "../..",
)
