load("@rules_uv_bare//uv:defs.bzl", "uv_py_deploy", "uv_py_entrypoint", "uv_py_export", "uv_py_lock", "uv_py_test", "uv_py_workspace")
load("@rules_uv_bare//uv/cc:defs.bzl", "uv_cc_env")

uv_cc_env(name = "cc_env")

# Platform targets
platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

platform(
    name = "darwin_aarch64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
)

# Config settings
config_setting(
    name = "is_linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "is_linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

config_setting(
    name = "is_darwin_aarch64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
)

uv_py_workspace(
    name = "ws",
    build_env_deps = [":cc_env"],
    bundle_build_deps = [
        "setuptools",
        "wheel",
        "uv-build>=0.7.19,<0.8",
    ],
    bundle_target_platform = select({
        ":is_linux_x86_64": "linux-x86_64-gnu",
        ":is_linux_aarch64": "linux-aarch64-gnu",
        ":is_darwin_aarch64": "macos-aarch64-none",
    }),
    dependency_groups = {"test": ["pytest>=8.0"]},
    # Force msgpack to build from source for demonstration.
    extra_pyproject_content = """
tool.uv.no-binary-package = ["msgpack"]
""",
    host_python = "cpython-3.12",
    lock = "uv.lock",
    members = ["//app"],
    platform_markers = {
        ":linux_x86_64": "platform_machine == 'x86_64' and sys_platform == 'linux'",
        ":linux_aarch64": "platform_machine == 'aarch64' and sys_platform == 'linux'",
        ":darwin_aarch64": "platform_machine == 'arm64' and sys_platform == 'darwin'",
    },
    wheels = ["//native_lib"],
)

uv_py_lock(
    name = "ws.lock",
    workspace = ":ws",
)

uv_py_export(
    name = "ws.export",
    workspace = ":ws",
)

uv_py_entrypoint(
    name = "run",
    cmd = ["app"],
    workspace = ":ws",
)

uv_py_test(
    name = "test",
    cmd = [
        "pytest",
        "app/tests/",
    ],
    workspace = ":ws",
)

uv_py_deploy(
    name = "deploy",
    workspace = ":ws",
)
