module(
    name = "native_cross_example",
    version = "0.0.1",
)

bazel_dep(name = "rules_uv_bare", version = "0.0.1")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_python", version = "1.8.5")
bazel_dep(name = "nanobind_bazel", version = "2.10.2")
bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.9")
bazel_dep(name = "platforms", version = "1.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

local_path_override(
    module_name = "rules_uv_bare",
    path = "../..",
)

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
)
