load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_binary")
load("//uv/private:py_runtime.bzl", "uv_py_runtime")

exports_files(
    [
        "venv_run.sh",
        "venv_activate.sh",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "workspace_tool",
    srcs = ["workspace_tool.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "wheel_tool",
    srcs = ["wheel_tool.py"],
    visibility = ["//visibility:public"],
)

uv_py_runtime(
    name = "py_runtime",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//uv:__pkg__"],
)

bzl_library(
    name = "deploy",
    srcs = ["deploy.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = [":providers"],
)

bzl_library(
    name = "entrypoint",
    srcs = ["entrypoint.bzl"],
    visibility = ["//uv:__pkg__"],
)

bzl_library(
    name = "import_wheel",
    srcs = ["import_wheel.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = [":providers"],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = [":providers"],
)

bzl_library(
    name = "wheel",
    srcs = ["wheel.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = [":providers"],
)

bzl_library(
    name = "lock",
    srcs = ["lock.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = [":providers"],
)

bzl_library(
    name = "workspace",
    srcs = ["workspace.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = [
        ":providers",
        "@platforms//host:constraints_lib",
        "@rules_shell//shell:rules_bzl",
    ],
)
