load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "venv_run.sh",
        "venv_activate.sh",
        "venv_entrypoint.sh.tpl",
        "bundle_copy.sh",
        "workspace_tool.py",
        "wheel_tool.py",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//uv:__pkg__"],
)

bzl_library(
    name = "paths",
    srcs = ["paths.bzl"],
    visibility = ["//uv:__pkg__"],
)

bzl_library(
    name = "deploy",
    srcs = ["deploy.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = ["@rules_shell//shell:rules_bzl"],
)

bzl_library(
    name = "entrypoint",
    srcs = ["entrypoint.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = [":paths"],
)

bzl_library(
    name = "import_wheel",
    srcs = ["import_wheel.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = [":providers"],
)

bzl_library(
    name = "markers",
    srcs = ["markers.bzl"],
    visibility = ["//uv:__pkg__"],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = [":providers"],
)

bzl_library(
    name = "wheel",
    srcs = ["wheel.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = [
        ":providers",
        ":uv_env",
    ],
)

bzl_library(
    name = "lock",
    srcs = ["lock.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = [
        ":paths",
        ":providers",
        ":uv_env",
    ],
)

bzl_library(
    name = "uv_env",
    srcs = ["uv_env.bzl"],
    visibility = ["//uv:__pkg__"],
)

bzl_library(
    name = "workspace",
    srcs = ["workspace.bzl"],
    visibility = ["//uv:__pkg__"],
    deps = [
        ":providers",
        ":uv_env",
        "@platforms//host:constraints_lib",
        "@rules_shell//shell:rules_bzl",
    ],
)
